--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="renderer" content="webkit">
   <meta name="robots" content="all">
-  <meta name="author" content="Tencent-CP">
-  <meta name="Copyright" content="Tencent">
+  <meta name="Copyright" content="7days">
+  <link rel="stylesheet" href="./weui.min.css">
+  <script src="./jquery.min.js"></script>
+  <script src="./jquery-weui.min.js"></script>
+  $(function(){
+    $.showLoading();
+  })
 </head>
 <body>
 
 </body>
+
 </html>
