--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <link rel="stylesheet" href="./weui.min.css">
   <script src="./jquery.min.js"></script>
   <script src="./jquery-weui.min.js"></script>
-  $(function(){
-    $.showLoading();
-  })
+  <script>
+    $(function(){
+      $.showLoading();
+    })
+  </script>
 </head>
 <body>
 
