--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="robots" content="all">
   <meta name="Copyright" content="7days">
   <link rel="stylesheet" href="./weui.min.css">
-  <script src="./jquery.min.js"></script>
+  <script src="./jquery.js"></script>
   <script src="./jquery-weui.min.js"></script>
   <script>
     $(function(){
