--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="renderer" content="webkit">
-  <meta name="robots" content="all">
-  <meta name="Copyright" content="7days">
-  <link rel="stylesheet" href="./weui.min.css">
-  <script src="./jquery.js"></script>
-  <script src="./jquery-weui.min.js"></script>
-  <script>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="white">
+<meta name="format-detection" content="telephone=no">
+<meta name="format-detection" content="email=no">
+<link rel="stylesheet" href="./weui.min.css">
+<script src="./jquery.js"></script>
+<script src="./jquery-weui.min.js"></script>
+<script>
     $(function(){
       $.showLoading();
     })
-  </script>
+</script>
 </head>
 <body>
-
 </body>
-
 </html>
