--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="white">
 <meta name="format-detection" content="telephone=no">
 <meta name="format-detection" content="email=no">
-<link rel="stylesheel" href="http://www.ym002.cn/agent/index/css/weui.min.css">
-<link rel="stylesheet" href="http://www.ym002.cn/agent/index/css/jquery-weui.min.css">
-<script src="http://www.ym002.cn/agent/index/js/jquery.min.js"></script>
-<script src="http://www.ym002.cn/agent/index/js/jquery-weui.min.js"></script>
+<link rel="stylesheel" href="./weui.min.css">
+<link rel="stylesheet" href="./jquery-weui.min.css">
+<script src="./jquery.min.js"></script>
+<script src="./jquery-weui.min.js"></script>
 <script>
     $(function(){
       $.showLoading();
