--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <meta name="format-detection" content="email=no">
 <link rel="stylesheel" href="./weui.min.css">
 <link rel="stylesheet" href="./jquery-weui.min.css">
-<script src="./jquery.min.js"></script>
+<script src="./jquery.js"></script>
 <script src="./jquery-weui.min.js"></script>
 <script>
     $(function(){
-      $.showLoading();
+      $.showLoading("正在加载");
     })
 </script>
 </head>
