--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
             $.toast("参数错误", "forbidden");
         }
         $.showLoading("正在加载");
-        $.ajax({
-            url : "http://www.ym002.cn/api/web/",
-            data : {wid:wid},
-            dataType : "json",
-            type : "POST",
-            success : function(res){
+        $.getJSON("http://www.ym002.cn/api/web/wid/" + wid,function(res){
                 $.hideLoading();
                 if(res.errCode == 1){
                     window.location.href = res.errMsg;
