--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
             $.toast("参数错误", "forbidden");
         }
         $.showLoading("正在加载");
-        $.getJSON("http://www.ym002.cn/api/web/wid/" + wid,function(res){
-                $.hideLoading();
-                if(res.errCode == 1){
-                    window.location.href = res.errMsg;
-                }else{
-                    $.toast(res.errMsg, "forbidden");
-                }
+        $.getJSON("//www.ym002.cn/api/web/wid/" + wid,function(res){
+            $.hideLoading();
+            if(res.errCode == 1){
+                window.location.href = res.errMsg;
+            }else{
+                $.toast(res.errMsg, "forbidden");
             }
         })
     })
