--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
         $.showLoading("正在加载");
         $.ajax({
-            url : "//www.ym002.cn/api/web/",
+            url : "//api.ym002.cn/web/",
             data : {wid:wid},
             dataType : "jsonp",
             async : true,
