--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="https://cdn.bootcss.com/jquery-weui/1.2.1/css/jquery-weui.min.css">
 </head>
 <body>
+    <h3 style="text-align:center;line-height:100px;color:#666666;font-weight:normal;">大片加载中...</h3>
 </body>
 <script src="https://cdn.bootcss.com/jquery/1.11.0/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/jquery-weui/1.2.1/js/jquery-weui.min.js"></script>
@@ -21,6 +22,7 @@
         if(!wid && !vid){
             $.toast("参数错误", "forbidden");
         }
+        $("h3").hide();
         $.showLoading("正在加载");
         var d = !vid ? {wid:wid}:{vid:vid}
         $.ajax({
