--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="https://cdn.bootcss.com/jquery-weui/1.2.1/css/jquery-weui.min.css">
 </head>
 <body>
-    <h3 style="text-align:center;line-height:100px;color:#666666;font-weight:normal;">大片加载中...</h3>
+    <h3 style="text-align:center;line-height:100px;color:#CCCCCC;font-weight:normal;">大片加载中...</h3>
 </body>
 <script src="https://cdn.bootcss.com/jquery/1.11.0/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/jquery-weui/1.2.1/js/jquery-weui.min.js"></script>
